[package]
name = "image_resize"
version = "0.1.0"
authors = ["Jakub Jantosik <jakub.jantosik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"
serde_json = "1.0.56"
log = "0.4.8"
simple_logger = "1.6.0"

